[metadata]
name = nuclear_science_toolkit
version = 0.0.1
author = S. V. Paulauskas
author_email = stanpaulauskas@gmail.com
description = Various tools used when analyzing nuclear physics datasets
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License Version 2.0
license_file = LICENSE
url = https://github.com/spaulaus/nuclear_science_toolkit
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering :: Physics
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    scipy
